--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -36,11 +36,9 @@ android {
 }
 
 dependencies {
-    // ...
     compile 'com.google.firebase:firebase-core:9.6.1'
-    // Getting a "Could not find" error? Make sure you have
-    // the latest Google Repository in the Android SDK manager
+    compile 'com.google.firebase:firebase-auth:9.6.1'
+    compile 'com.google.firebase:firebase-database:9.6.1'
 }
 
-// ADD THIS AT THE BOTTOM
 apply plugin: 'com.google.gms.google-services'
