--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -16,25 +16,15 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity
-            android:name=".register">
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".register">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:parentActivityName=".register">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.lintech.yougo.register" />
-        </activity>
+        <activity android:name=".login"></activity>
     </application>
 
 </manifest>
