--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lintech.yougo">
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyDvDFdsdqR0qPrvr34UtLYFgfH1SfqNZP4"/>
 
     <application
         android:allowBackup="true"
