--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lintech.yougo">
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyDvDFdsdqR0qPrvr34UtLYFgfH1SfqNZP4"/>
 
     <application
         android:allowBackup="true"
@@ -22,6 +18,9 @@
         <activity android:name=".login" />
         <activity android:name=".TripList" />
         <activity android:name=".tripDetail"></activity>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 </manifest>
